--- a/packages/auto_mappr/pubspec.yaml
+++ b/packages/auto_mappr/pubspec.yaml
@@ -3,6 +3,7 @@ description: Code generation for mapping between different objects with ease.
 version: 2.1.1
 repository: https://github.com/netglade/auto_mappr
 issue_tracker: https://github.com/netglade/auto_mappr/issues
+publish_to: none
 screenshots:
   - description: The auto_mappr package logo.
     path: doc/icon.png
@@ -14,11 +15,7 @@ dependencies:
   # TODO: Support analyzer same way as json_serializable https://github.com/google/json_serializable.dart/pull/1333
   analyzer: ">=5.4.0 <7.0.0"
   auto_mappr_annotation: 
-    git:
-      url: https://github.com/posbankbh/auto_mappr.git
-      path: packages/auto_mappr_annotation
-      ref: main
-  build: ^2.3.1
+    path: ../auto_mappr_annotation
   built_collection: ^5.1.1
   code_builder: ^4.4.0
   collection: ^1.17.0
